--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae7977">  <td>23/04/14 17:05:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.facebookmessenger.messenger.TestMessenger@7ec3394b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>23/04/14 17:05:04</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logOut()[pri:0, instance:com.facebookmessenger.messenger.TestMessenger@7ec3394b]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>23/04/14 17:05:01</td>   <td>-3163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.facebookmessenger.messenger.TestMessenger@7ec3394b]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1265053098</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>23/04/14 17:05:00</td>   <td>-4392</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:com.facebookmessenger.messenger.TestMessenger@7ec3394b]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265053098</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>23/04/14 17:05:04</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMessenger.testMsg()[pri:0, instance:com.facebookmessenger.messenger.TestMessenger@7ec3394b]">testMsg</td> 
-  <td>main@1265053098</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>23/04/20 16:15:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.facebookmessenger.messenger.TestMessengerLoop@6404f418]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418555530</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>23/04/20 16:15:31</td>   <td>-3366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logOut()[pri:0, instance:com.facebookmessenger.messenger.TestMessengerLoop@6404f418]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1418555530</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>23/04/20 16:15:09</td>   <td>-25149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.facebookmessenger.messenger.TestMessengerLoop@6404f418]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1418555530</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>23/04/20 16:15:07</td>   <td>-26944</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:com.facebookmessenger.messenger.TestMessengerLoop@6404f418]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418555530</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>23/04/20 16:15:11</td>   <td>-23447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMessengerLoop.testMsg()[pri:0, instance:com.facebookmessenger.messenger.TestMessengerLoop@6404f418]">testMsg</td> 
+  <td>main@1418555530</td>   <td></td> </tr>
 </table>
